// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mqs/react-server-components components <Alert /> renders 1`] = `
<DocumentFragment>
  <div
    class="alert alert-info test"
    data-testid="Alert"
  >
    children...
  </div>
</DocumentFragment>
`;

exports[`Storyshots @mqs/react-server-components/components/Alert Alert Error Example 1`] = `
<div
  className="alert alert-error"
  data-testid="Alert"
>
  <div>
    <svg
      className="stroke-current flex-shrink-0 h-6 w-6"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
      />
    </svg>
    <span>
      Error! Task failed successfully.
    </span>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Alert Alert Example 1`] = `
<div
  className="alert"
  data-testid="Alert"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut mollis.
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Alert Alert Info Example 1`] = `
<div
  className="alert alert-info"
  data-testid="Alert"
>
  <div>
    <svg
      className="stroke-current flex-shrink-0 w-6 h-6"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
      />
    </svg>
    <span>
      New software update available.
    </span>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Alert Alert Success Example 1`] = `
<div
  className="alert alert-success"
  data-testid="Alert"
>
  <div>
    <svg
      className="stroke-current flex-shrink-0 h-6 w-6"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
      />
    </svg>
    <span>
      Your purchase has been confirmed!
    </span>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Alert Alert Warning Example 1`] = `
<div
  className="alert alert-warning"
  data-testid="Alert"
>
  <div>
    <svg
      className="stroke-current flex-shrink-0 h-6 w-6"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
      />
    </svg>
    <span>
      Warning: Invalid email address!
    </span>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Alert Alert With Buttons Example 1`] = `
<div
  className="alert"
  data-testid="Alert"
>
  <svg
    className="stroke-info flex-shrink-0 w-6 h-6"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
    />
  </svg>
  <span>
    we use cookies for no reason.
  </span>
  <div>
    <button
      className="btn btn-ghost btn-sm"
      data-testid="Button"
      disabled={false}
      type="button"
    >
      Deny
    </button>
    <button
      className="btn btn-primary btn-sm"
      data-testid="Button"
      disabled={false}
      type="button"
    >
      Accept
    </button>
  </div>
</div>
`;

exports[`Storyshots @mqs/react-server-components/components/Alert Alert With Title And Description Example 1`] = `
<div
  className="alert"
  data-testid="Alert"
>
  <svg
    className="stroke-info flex-shrink-0 w-6 h-6"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
    />
  </svg>
  <div>
    <h3
      className="font-bold"
    >
      New message!
    </h3>
    <div
      className="text-xs"
    >
      You have 1 unread message
    </div>
  </div>
  <div
    className="flex-none"
  >
    <button
      className="btn btn-sm"
      data-testid="Button"
      disabled={false}
      type="button"
    >
      See
    </button>
  </div>
</div>
`;
